2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #14388: TypoScript templates containing a "$1" become corrupted

2010-05-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14489: htmlArea RTE: color dialogues do not show all configured colors
	* Fixed bug #14491: htmlArea RTE: disableColorPicker not always honoured

2010-05-27  Oliver Hader  <oliver@typo3.org>

	* Follow-up to #14465: Missing argument when rendering language preview in page module

2010-05-26  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14486: Added missing icons for the new iconset (thanks to Steffen Ritter)
	* Added feature #14465: Make use of the new sprite API through the TYPO3 core (thanks to Steffen Ritter)
	* Followup to feature #14465: Remove extra semicolon at end of line

2010-05-26  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #13443: Wrong image shown in WEB->PERM (thanks to Stephan Kellermayr) 

2010-05-26  Ingo Renner  <ingo@typo3.org>

	* Added feature #14463: Add post initialization hook for tslib_cObj
	* Follow-up to #14463: Added the new tslib_content_PostInitHook interface to core_autoload.php
	* Fixed issue #14480: tslib_cObj->start() sets a member "data", but not "table"

2010-05-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14394: Better debug output for SQL Explain
	* Fixed bug #14466: Bug: SpriteIconApi getSpriteIconForRecord does not find default icon (thanks to Steffen Ritter)
	* Follow-up to bug #13379: Sprite Icon API (thanks to Steffen Ritter)
	* Follow-up to bug #14324: Feature: Add spriteGeneratorAPI to support the new sprite-icon-api (thanks to Steffen Ritter)

2010-05-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14333: htmlArea RTE: justify after CTRL+A not working in Firefox

2010-05-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.9.3
	* Fixed bug #14470: htmlArea RTE: hovering custom colours produces shivering effect

2010-05-24  Benjamin Mack  <benni@typo3.org>
